--- a/roles/services/audiobookshelf/tasks/main.yml
+++ b/roles/services/audiobookshelf/tasks/main.yml
@@ -18,11 +18,11 @@
     labels:
       traefik.enable: "true"
       traefik.http.routers.audiobookshelf.entrypoints: "http"
-      traefik.http.routers.audiobookshelf.rule: "Host(`audiobooks.coulter.rocks`)||Host(`audiobooks-in.coulter.rocks`)"
+      traefik.http.routers.audiobookshelf.rule: "Host(`audiobooks.{{ domain }}`)||Host(`audiobooks-in.{{ domain }}`)"
       traefik.http.middlewares.audiobookshelf-https-redirect.redirectscheme.scheme: "https"
       traefik.http.routers.audiobookshelf.middlewares: "audiobookshelf-https-redirect"
       traefik.http.routers.audiobookshelf-secure.entrypoints: "https"
-      traefik.http.routers.audiobookshelf-secure.rule: "Host(`audiobooks.coulter.rocks`)||Host(`audiobooks-in.coulter.rocks`)"
+      traefik.http.routers.audiobookshelf-secure.rule: "Host(`audiobooks.{{ domain }}`)||Host(`audiobooks-in.{{ domain }}`)"
       traefik.http.routers.audiobookshelf-secure.tls: "true"
       traefik.http.routers.audiobookshelf-secure.service: "audiobookshelf"
       traefik.http.services.audiobookshelf.loadbalancer.server.url: "http://vault.local:13378"
