--- a/roles/home-automation/esphome/tasks/main.yml
+++ b/roles/home-automation/esphome/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Make sure the {{ container_name }} container is created and running
-  become: true
+  # become: true
   docker_container:
     name: "{{ container_name }}"
     image: "esphome/esphome"
@@ -12,6 +12,7 @@
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
       TZ: "{{ timezone }}"
+      ESPHOME_DASHBOARD_USE_PING: "true"
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - "{{ config_root }}/esphome_config:/config"
