--- a/roles/media/jellyfin/tasks/main.yml
+++ b/roles/media/jellyfin/tasks/main.yml
@@ -25,11 +25,11 @@
     labels:
       traefik.enable: "true"
       traefik.http.routers.jellyfin.entrypoints: "http"
-      traefik.http.routers.jellyfin.rule: "Host(`jelly.coulter.rocks`)"
+      traefik.http.routers.jellyfin.rule: "Host(`jelly.{{ domain }}`)"
       traefik.http.middlewares.jellyfin-https-redirect.redirectscheme.scheme: "https"
       traefik.http.routers.jellyfin.middlewares: "jellyfin-https-redirect"
       traefik.http.routers.jellyfin-secure.entrypoints: "https"
-      traefik.http.routers.jellyfin-secure.rule: "Host(`jelly.coulter.rocks`)"
+      traefik.http.routers.jellyfin-secure.rule: "Host(`jelly.{{ domain }}`)"
       traefik.http.routers.jellyfin-secure.tls: "true"
       traefik.http.routers.jellyfin-secure.service: "jellyfin"
       traefik.http.services.jellyfin.loadbalancer.server.url: "http://192.168.1.36:8096"
