--- a/roles/services/duplicati/tasks/main.yml
+++ b/roles/services/duplicati/tasks/main.yml
@@ -26,14 +26,14 @@
     labels:
       traefik.enable: "true"
       traefik.http.routers.duplicati.entrypoints: "http"
-      # This syntax allows cloudflare tunnel to host duplicati.coulter.rocks which points to local duplicati-in.coulter.rocks over https
-      # Both duplicati.coulter.rocks and duplicati-in.coulter.rocks must be configured in local dns (pi-hole)
+      # This syntax allows cloudflare tunnel to host duplicati.{{ domain }} which points to local duplicati-in.{{ domain }} over https
+      # Both duplicati.{{ domain }} and duplicati-in.{{ domain }} must be configured in local dns (pi-hole)
       # https://www.youtube.com/watch?v=yMmxw-DZ5Ec
-      traefik.http.routers.duplicati.rule: "Host(`duplicati.coulter.rocks`)||Host(`duplicati-in.coulter.rocks`)"
+      traefik.http.routers.duplicati.rule: "Host(`duplicati.{{ domain }}`)||Host(`duplicati-in.{{ domain }}`)"
       traefik.http.middlewares.duplicati-https-redirect.redirectscheme.scheme: "https"
       traefik.http.routers.duplicati.middlewares: "duplicati-https-redirect"
       traefik.http.routers.duplicati-secure.entrypoints: "https"
-      traefik.http.routers.duplicati-secure.rule: "Host(`duplicati.coulter.rocks`)||Host(`duplicati-in.coulter.rocks`)"
+      traefik.http.routers.duplicati-secure.rule: "Host(`duplicati.{{ domain }}`)||Host(`duplicati-in.{{ domain }}`)"
       traefik.http.routers.duplicati-secure.tls: "true"
       traefik.http.routers.duplicati-secure.service: "duplicati"
       traefik.http.services.duplicati.loadbalancer.server.url: "http://vault.local:8200"
