--- a/roles/services/nextcloud-aio/defaults/main.yml
+++ b/roles/services/nextcloud-aio/defaults/main.yml
@@ -1,3 +1,6 @@
 # mountpoint: "nextcloud-aio"
 # ncaio_db_path: "{{ data_root }}/nextcloud-aio/db"
 # ncaio_html_path: "{{ data_root }}/nextcloud-aio/html"
+nextcloud_memory_limit: "2g"
+nextcloud_memory_reservation: "1g"
+nextcloud_trusted_domains: "nextcloud.{{ domain }}"
