--- a/roles/services/nextcloud-aio/templates/nextcloud-aio-config.yml
+++ b/roles/services/nextcloud-aio/templates/nextcloud-aio-config.yml
@@ -2,7 +2,7 @@
 http:
   routers:
     nextcloud:
-      rule: "Host(`nextcloud.{{ domain }}`))"
+      rule: "Host(`nextcloud.{{ domain }}`)"
       entrypoints:
         - "https"
       service: nextcloud
