--- a/roles/services/nextcloud-aio/tasks/main.yml
+++ b/roles/services/nextcloud-aio/tasks/main.yml
@@ -1,7 +1,5 @@
 ---
-#  Create docker volume  /var/lib/docker/volumes/nextcloud_aio_mastercontainer/_data
-
-- name: Make sure - "NextCloud All In One container is created and running {{ ncaio_html_path }}"
+- name: "Make sure - NextCloud All In One container is created and running"
   docker_container:
     container_default_behavior: compatibility
     networks_cli_compatible: yes
@@ -9,22 +7,12 @@
     image: nextcloud/all-in-one:latest
     restart_policy: unless-stopped
     published_ports:
-      # - "8101:80"
       - "8102:8080"
-      # - "8445:8443"
-    # networks:
-    #   - name: proxy
-    # labels:
-    #   traefik.enable: "true"
-    #   traefik.http.routers.nextcloudaio.entrypoints: "http"
-    #   traefik.http.routers.nextcloudaio.rule: "Host(`nextcloud.{{ domain }}`))"
-    #   traefik.http.middlewares.nextcloudaio-https-redirect.redirectscheme.scheme: "https"
-    #   traefik.http.routers.nextcloudaio.middlewares: "nextcloudaio-https-redirect"
-    #   traefik.http.routers.nextcloudaio-secure.entrypoints: "https"
-    #   traefik.http.routers.nextcloudaio-secure.rule: "Host(`nextcloud.{{ domain }}`)"
-    #   traefik.http.routers.nextcloudaio-secure.tls: "true"
-    #   traefik.http.routers.nextcloudaio-secure.service: "nextcloud-aio-mastercontainer "
-    #   traefik.http.services.nextcloudaio.loadbalancer.server.url: "http://192.168.1.36:8102"
+      # - "11000:11000"
+    networks:
+      - name: proxy
+        aliases:
+          - nextcloud
     pull: yes
     state: 'started'
     env:
@@ -34,9 +22,16 @@
       APACHE_PORT: "11000"
       APACHE_IP_BINDING: "0.0.0.0"
       APACHE_ADDITIONAL_NETWORK: "proxy"
-      SKIP_DOMAIN_VALIDATION: "false"
+      SKIP_DOMAIN_VALIDATION: "true"
+      NC_DOMAIN: "nextcloud.{{ domain }}"
+      AIO_DISABLE_DOMAINCHECK: "true"
+      NEXTCLOUD_ADDITIONAL_TRUSTED_DOMAINS: "nextcloud-aio-apache"  # Add this
+      NEXTCLOUD_ADDITIONAL_APCU_FAST_SHUTDOWN: "1"  # Optional performance improvement
     volumes:
-      # - "{{ ncaio_html_path }}:/var/www/html"
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - nextcloud_aio_mastercontainer:/mnt/docker-aio-config
-
+    memory: "{{ nextcloud_memory_limit }}"
+    memory_reservation: "{{ nextcloud_memory_reservation }}"
+    cpu_shares: 1024
+    security_opts:
+      - no-new-privileges:true
