--- a/roles/setup/user_setup/tasks/main.yml
+++ b/roles/setup/user_setup/tasks/main.yml
@@ -14,11 +14,11 @@
 #    `-k` allows ssh password
 #    `-K` allows sudo password
 
-- name: Install aptitude
-  apt:
-    name: aptitude
-    state: latest
-    update_cache: true
+# - name: Install aptitude
+#   apt:
+#     name: aptitude
+#     state: latest
+#     update_cache: true
 
 - name: Setup passwordless sudo
   lineinfile:
@@ -40,7 +40,7 @@
   ansible.posix.authorized_key:
     user: "{{ created_username }}"
     state: present
-    key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_rsa.pub') }}"
+    key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_ed25519.pub') }}"
 
 # This is what kills my omv login
 # - name: Disable password authentication for root
