creating rallly role which depends on smtp server so probably going to move in another direction.

--- a/run.yml
+++ b/run.yml
@@ -304,10 +304,10 @@
         - qbittorrent
         - qbittorrent-vpn
 
-    - role: calcom
+    - role: rally
       tags:
         - containers
-        - calcom
+        - rally
         
 # TODO: wire containers through gluetun 
 
