--- a/roles/home-automation/zigbee2mqtt/tasks/main.yml
+++ b/roles/home-automation/zigbee2mqtt/tasks/main.yml
@@ -4,7 +4,6 @@
   docker_container:
     name: "{{ container_name }}"
     image: "koenkk/zigbee2mqtt"
-    # network_mode: host
     pull: yes
     state: 'started'
     ports:
@@ -17,12 +16,8 @@
       - "{{ config_root }}/zigbee2mqtt_data:/app/data"
       - "/run/udev:/run/udev:ro"
     devices:
-      # zigbee device
-      - "/dev/ttyUSB1:/dev/ttyACM0"
-      # - "/dev/zwave:/dev/zwave"
+      - "/dev/ttyUSB0:/dev/ttyUSB0:rwm"
+      # - "/dev/ttyUSB2:/dev/ttyUSB2:rwm"
+    groups:
+      - dialout
     restart_policy: unless-stopped
-
-
-    # devices:
-    #   # Make sure this matched your adapter location
-    #   - /dev/serial/by-id/usb-Texas_Instruments_TI_CC2531_USB_CDC___0X00124B0018ED3DDF-if00:/dev/ttyACM0
