--- a/roles/home-automation/homeassistant/tasks/main.yml
+++ b/roles/home-automation/homeassistant/tasks/main.yml
@@ -55,9 +55,9 @@
     name: "{{ container_name }}"
     image: "homeassistant/home-assistant:stable"
     network_mode: host
-    devices:
-      - "/dev/ttyUSB1:/dev/zigbee"
-      - "/dev/ttyUSB0:/dev/zwave"
+    # devices:
+    #   - "/dev/ttyUSB0:/dev/zigbee"
+    #   # - "/dev/ttyUSB0:/dev/zwave"
     pull: yes
     state: 'started'
     env:
